removed instance of videos, redirected unlinked socials to open in new tabs

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -91,7 +91,8 @@
                 >
                   <li>
                     <a
-                      href="https://www.facebook.com"
+                      href="#"
+                      target="_blank"
                       class="tw-w-11 tw-h-11 border border-neutral-200 rounded-circle text-main-two-600 tw-text-xl d-flex justify-content-center align-items-center bg-white hover-bg-main-600 hover-text-white hover-border-main-600 active-scale-09 tw-duration-200"
                     >
                       <i class="ph ph-facebook-logo"></i>
@@ -99,7 +100,8 @@
                   </li>
                   <li>
                     <a
-                      href="https://www.twitter.com"
+                      href="#"
+                      target="_blank"
                       class="tw-w-11 tw-h-11 border border-neutral-200 rounded-circle text-main-two-600 tw-text-xl d-flex justify-content-center align-items-center bg-white hover-bg-main-600 hover-text-white hover-border-main-600 active-scale-09 tw-duration-200"
                     >
                       <i class="ph ph-x-logo"></i>
@@ -107,7 +109,8 @@
                   </li>
                   <li>
                     <a
-                      href="https://www.instagram.com"
+                      href="#"
+                      target="_blank"
                       class="tw-w-11 tw-h-11 border border-neutral-200 rounded-circle text-main-two-600 tw-text-xl d-flex justify-content-center align-items-center bg-white hover-bg-main-600 hover-text-white hover-border-main-600 active-scale-09 tw-duration-200"
                     >
                       <i class="ph ph-instagram-logo"></i>
@@ -115,7 +118,8 @@
                   </li>
                   <li>
                     <a
-                      href="https://www.youtube.com"
+                      href="#"
+                      target="_blank"
                       class="tw-w-11 tw-h-11 border border-neutral-200 rounded-circle text-main-two-600 tw-text-xl d-flex justify-content-center align-items-center bg-white hover-bg-main-600 hover-text-white hover-border-main-600 active-scale-09 tw-duration-200"
                     >
                       <i class="ph ph-youtube-logo"></i>
