--- a/views/layouts/nav-other.ejs
+++ b/views/layouts/nav-other.ejs
@@ -179,7 +179,8 @@
         >
           <li class="border-bottom border-neutral-1100 border-end">
             <a
-              href="https://www.twitter.com"
+              href="#"
+              target="_blank"
               class="hover-scale-20 cursor-small text-white tw-text-base w-100 h-100 d-flex justify-content-center align-items-center"
             >
               <i class="ph-fill ph-twitter-logo"></i>
@@ -187,7 +188,8 @@
           </li>
           <li class="border-bottom border-neutral-1100">
             <a
-              href="https://www.facebook.com"
+              href="#"
+              target="_blank"
               class="hover-scale-20 cursor-small text-white tw-text-base w-100 h-100 d-flex justify-content-center align-items-center"
             >
               <i class="ph-fill ph-facebook-logo"></i>
@@ -195,7 +197,8 @@
           </li>
           <li class="border-end border-neutral-1100">
             <a
-              href="https://www.instagram.com"
+              href="#"
+              target="_blank"
               class="hover-scale-20 cursor-small text-white tw-text-base w-100 h-100 d-flex justify-content-center align-items-center"
             >
               <i class="ph-bold ph-instagram-logo"></i>
@@ -203,7 +206,8 @@
           </li>
           <li class="">
             <a
-              href="https://www.youtube.com"
+              href="#"
+              target="_blank"
               class="hover-scale-20 cursor-small text-white tw-text-base w-100 h-100 d-flex justify-content-center align-items-center"
             >
               <i class="ph-fill ph-youtube-logo"></i>
