--- a/views/blog/index.ejs
+++ b/views/blog/index.ejs
@@ -315,7 +315,8 @@
                 >
                   <li>
                     <a
-                      href="https://www.facebook.com"
+                      href="#"
+                      target="_blank"
                       class="tw-w-11 tw-h-11 border border-neutral-200 rounded-0 text-main-two-600 tw-text-xl d-flex justify-content-center align-items-center bg-white hover-bg-main-600 hover-text-white hover-border-main-600 active-scale-09 tw-duration-200"
                     >
                       <i class="ph ph-facebook-logo"></i>
@@ -323,7 +324,8 @@
                   </li>
                   <li>
                     <a
-                      href="https://www.twitter.com"
+                      href="#"
+                      target="_blank"
                       class="tw-w-11 tw-h-11 border border-neutral-200 rounded-0 text-main-two-600 tw-text-xl d-flex justify-content-center align-items-center bg-white hover-bg-main-600 hover-text-white hover-border-main-600 active-scale-09 tw-duration-200"
                     >
                       <i class="ph ph-x-logo"></i>
@@ -331,7 +333,8 @@
                   </li>
                   <li>
                     <a
-                      href="https://www.instagram.com"
+                      href="#"
+                      target="_blank"
                       class="tw-w-11 tw-h-11 border border-neutral-200 rounded-0 text-main-two-600 tw-text-xl d-flex justify-content-center align-items-center bg-white hover-bg-main-600 hover-text-white hover-border-main-600 active-scale-09 tw-duration-200"
                     >
                       <i class="ph ph-instagram-logo"></i>
@@ -339,7 +342,8 @@
                   </li>
                   <li>
                     <a
-                      href="https://www.youtube.com"
+                      href="#"
+                      target="_blank"
                       class="tw-w-11 tw-h-11 border border-neutral-200 rounded-0 text-main-two-600 tw-text-xl d-flex justify-content-center align-items-center bg-white hover-bg-main-600 hover-text-white hover-border-main-600 active-scale-09 tw-duration-200"
                     >
                       <i class="ph ph-youtube-logo"></i>
