--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -131,7 +131,8 @@
           >
             <li>
               <a
-                href="https://www.facebook.com"
+                href="#"
+                target="_blank"
                 class="tw-w-11 tw-h-11 border border-neutral-200 rounded-circle text-main-two-600 tw-text-xl d-flex justify-content-center align-items-center hover-bg-main-600 hover-text-white hover-border-main-600 active-scale-09 tw-duration-200"
               >
                 <i class="ph ph-facebook-logo"></i>
@@ -139,7 +140,8 @@
             </li>
             <li>
               <a
-                href="https://www.twitter.com"
+                href="#"
+                target="_blank"
                 class="tw-w-11 tw-h-11 border border-neutral-200 rounded-circle text-main-two-600 tw-text-xl d-flex justify-content-center align-items-center hover-bg-main-600 hover-text-white hover-border-main-600 active-scale-09 tw-duration-200"
               >
                 <i class="ph ph-x-logo"></i>
@@ -147,7 +149,8 @@
             </li>
             <li>
               <a
-                href="https://www.instagram.com"
+                href="#"
+                target="_blank"
                 class="tw-w-11 tw-h-11 border border-neutral-200 rounded-circle text-main-two-600 tw-text-xl d-flex justify-content-center align-items-center hover-bg-main-600 hover-text-white hover-border-main-600 active-scale-09 tw-duration-200"
               >
                 <i class="ph ph-instagram-logo"></i>
@@ -155,7 +158,8 @@
             </li>
             <li>
               <a
-                href="https://www.youtube.com"
+                href="#"
+                target="_blank"
                 class="tw-w-11 tw-h-11 border border-neutral-200 rounded-circle text-main-two-600 tw-text-xl d-flex justify-content-center align-items-center hover-bg-main-600 hover-text-white hover-border-main-600 active-scale-09 tw-duration-200"
               >
                 <i class="ph ph-youtube-logo"></i>
@@ -419,28 +423,32 @@
                 <ul class="d-flex align-items-center tw-gap-5">
                   <li>
                     <a
-                      href="https://www.twitter.com"
+                      href="#"
+                      target="_blank"
                       class="tw-text-base text-neutral-100 hover-text-white hover-scale-20 cursor-small"
                       ><i class="ph-fill ph-twitter-logo"></i
                     ></a>
                   </li>
                   <li>
                     <a
-                      href="https://www.facebook.com"
+                      href="#"
+                      target="_blank"
                       class="tw-text-base text-neutral-100 hover-text-white hover-scale-20 cursor-small"
                       ><i class="ph-fill ph-facebook-logo"></i
                     ></a>
                   </li>
                   <li>
                     <a
-                      href="https://www.instagram.com"
+                      href="#"
+                      target="_blank"
                       class="tw-text-base text-neutral-100 hover-text-white hover-scale-20 cursor-small"
                       ><i class="ph-bold ph-instagram-logo"></i
                     ></a>
                   </li>
                   <li>
                     <a
-                      href="https://www.youtube.com"
+                      href="#"
+                      target="_blank"
                       class="tw-text-base text-neutral-100 hover-text-white hover-scale-20 cursor-small"
                       ><i class="ph-fill ph-youtube-logo"></i
                     ></a>
