--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -91,7 +91,7 @@
                 >
                   <li>
                     <a
-                      href="#"
+                      href="https://www.facebook.com/profile.php?id=61575951567653"
                       target="_blank"
                       class="tw-w-11 tw-h-11 border border-neutral-200 rounded-circle text-main-two-600 tw-text-xl d-flex justify-content-center align-items-center bg-white hover-bg-main-600 hover-text-white hover-border-main-600 active-scale-09 tw-duration-200"
                     >
@@ -100,16 +100,7 @@
                   </li>
                   <li>
                     <a
-                      href="#"
-                      target="_blank"
-                      class="tw-w-11 tw-h-11 border border-neutral-200 rounded-circle text-main-two-600 tw-text-xl d-flex justify-content-center align-items-center bg-white hover-bg-main-600 hover-text-white hover-border-main-600 active-scale-09 tw-duration-200"
-                    >
-                      <i class="ph ph-x-logo"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <a
-                      href="#"
+                      href="https://www.instagram.com/dxpressl/"
                       target="_blank"
                       class="tw-w-11 tw-h-11 border border-neutral-200 rounded-circle text-main-two-600 tw-text-xl d-flex justify-content-center align-items-center bg-white hover-bg-main-600 hover-text-white hover-border-main-600 active-scale-09 tw-duration-200"
                     >
@@ -118,11 +109,11 @@
                   </li>
                   <li>
                     <a
-                      href="#"
+                      href="https://www.linkedin.com/company/107220447/admin/page-posts/published/"
                       target="_blank"
                       class="tw-w-11 tw-h-11 border border-neutral-200 rounded-circle text-main-two-600 tw-text-xl d-flex justify-content-center align-items-center bg-white hover-bg-main-600 hover-text-white hover-border-main-600 active-scale-09 tw-duration-200"
                     >
-                      <i class="ph ph-youtube-logo"></i>
+                      <i class="ph ph-linkedin-logo"></i>
                     </a>
                   </li>
                 </ul>
