--- a/views/layouts/nav-other.ejs
+++ b/views/layouts/nav-other.ejs
@@ -179,38 +179,29 @@
         >
           <li class="border-bottom border-neutral-1100 border-end">
             <a
-              href="#"
-              target="_blank"
-              class="hover-scale-20 cursor-small text-white tw-text-base w-100 h-100 d-flex justify-content-center align-items-center"
-            >
-              <i class="ph-fill ph-twitter-logo"></i>
-            </a>
-          </li>
-          <li class="border-bottom border-neutral-1100">
-            <a
-              href="#"
+              href="https://www.facebook.com/profile.php?id=61575951567653"
               target="_blank"
               class="hover-scale-20 cursor-small text-white tw-text-base w-100 h-100 d-flex justify-content-center align-items-center"
             >
               <i class="ph-fill ph-facebook-logo"></i>
             </a>
           </li>
-          <li class="border-end border-neutral-1100">
+          <li class="border-bottom border-neutral-1100">
             <a
-              href="#"
+              href="https://www.instagram.com/dxpressl/"
               target="_blank"
               class="hover-scale-20 cursor-small text-white tw-text-base w-100 h-100 d-flex justify-content-center align-items-center"
             >
               <i class="ph-bold ph-instagram-logo"></i>
             </a>
           </li>
-          <li class="">
+          <li class="border-end border-neutral-1100">
             <a
-              href="#"
+              href="https://www.linkedin.com/company/107220447/admin/page-posts/published/"
               target="_blank"
               class="hover-scale-20 cursor-small text-white tw-text-base w-100 h-100 d-flex justify-content-center align-items-center"
             >
-              <i class="ph-fill ph-youtube-logo"></i>
+              <i class="ph-fill ph-linkedin-logo"></i>
             </a>
           </li>
         </ul>
