--- a/views/team/index.ejs
+++ b/views/team/index.ejs
@@ -75,28 +75,21 @@
               >
                 <li>
                   <a
-                    href="#"
-                    class="tw-text-base text-neutral-1000 hover-text-main-two-600 hover-scale-20 cursor-small"
-                    ><i class="ph-fill ph-twitter-logo"></i
-                  ></a>
-                </li>
-                <li>
-                  <a
-                    href="#"
+                    href="https://www.facebook.com/profile.php?id=61575951567653"
                     class="tw-text-base text-neutral-1000 hover-text-main-two-600 hover-scale-20 cursor-small"
                     ><i class="ph-fill ph-facebook-logo"></i
                   ></a>
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="https://www.instagram.com/dxpressl/"
                     class="tw-text-base text-neutral-1000 hover-text-main-two-600 hover-scale-20 cursor-small"
                     ><i class="ph-bold ph-instagram-logo"></i
                   ></a>
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="https://www.linkedin.com/company/107220447/admin/page-posts/published/"
                     class="tw-text-base text-neutral-1000 hover-text-main-two-600 hover-scale-20 cursor-small"
                     ><i class="ph-fill ph-linkedin-logo"></i
                   ></a>
@@ -150,28 +143,21 @@
               >
                 <li>
                   <a
-                    href="#"
-                    class="tw-text-base text-neutral-1000 hover-text-main-two-600 hover-scale-20 cursor-small"
-                    ><i class="ph-fill ph-twitter-logo"></i
-                  ></a>
-                </li>
-                <li>
-                  <a
-                    href="#"
+                    href="https://www.facebook.com/profile.php?id=61575951567653"
                     class="tw-text-base text-neutral-1000 hover-text-main-two-600 hover-scale-20 cursor-small"
                     ><i class="ph-fill ph-facebook-logo"></i
                   ></a>
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="https://www.instagram.com/dxpressl/"
                     class="tw-text-base text-neutral-1000 hover-text-main-two-600 hover-scale-20 cursor-small"
                     ><i class="ph-bold ph-instagram-logo"></i
                   ></a>
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="https://www.linkedin.com/company/107220447/admin/page-posts/published/"
                     class="tw-text-base text-neutral-1000 hover-text-main-two-600 hover-scale-20 cursor-small"
                     ><i class="ph-fill ph-linkedin-logo"></i
                   ></a>
@@ -225,28 +211,21 @@
               >
                 <li>
                   <a
-                    href="#"
-                    class="tw-text-base text-neutral-1000 hover-text-main-two-600 hover-scale-20 cursor-small"
-                    ><i class="ph-fill ph-twitter-logo"></i
-                  ></a>
-                </li>
-                <li>
-                  <a
-                    href="#"
+                    href="https://www.facebook.com/profile.php?id=61575951567653"
                     class="tw-text-base text-neutral-1000 hover-text-main-two-600 hover-scale-20 cursor-small"
                     ><i class="ph-fill ph-facebook-logo"></i
                   ></a>
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="https://www.instagram.com/dxpressl/"
                     class="tw-text-base text-neutral-1000 hover-text-main-two-600 hover-scale-20 cursor-small"
                     ><i class="ph-bold ph-instagram-logo"></i
                   ></a>
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="https://www.linkedin.com/company/107220447/admin/page-posts/published/"
                     class="tw-text-base text-neutral-1000 hover-text-main-two-600 hover-scale-20 cursor-small"
                     ><i class="ph-fill ph-linkedin-logo"></i
                   ></a>
@@ -300,28 +279,21 @@
               >
                 <li>
                   <a
-                    href="#"
-                    class="tw-text-base text-neutral-1000 hover-text-main-two-600 hover-scale-20 cursor-small"
-                    ><i class="ph-fill ph-twitter-logo"></i
-                  ></a>
-                </li>
-                <li>
-                  <a
-                    href="#"
+                    href="https://www.facebook.com/profile.php?id=61575951567653"
                     class="tw-text-base text-neutral-1000 hover-text-main-two-600 hover-scale-20 cursor-small"
                     ><i class="ph-fill ph-facebook-logo"></i
                   ></a>
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="https://www.instagram.com/dxpressl/"
                     class="tw-text-base text-neutral-1000 hover-text-main-two-600 hover-scale-20 cursor-small"
                     ><i class="ph-bold ph-instagram-logo"></i
                   ></a>
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="https://www.linkedin.com/company/107220447/admin/page-posts/published/"
                     class="tw-text-base text-neutral-1000 hover-text-main-two-600 hover-scale-20 cursor-small"
                     ><i class="ph-fill ph-linkedin-logo"></i
                   ></a>
