--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -480,7 +480,7 @@
                   <img src="/assets/images/icons/envelop.svg" alt="" />
                 </span>
                 <div class="">
-                  <span class="d-block fw-bold text-white">Drop A Line</span>
+                  <span class="d-block fw-bold text-white">Email Us</span>
                   <a
                     href="mailto:support@dxpress.uk"
                     class="d-block fw-normal text-white hover-text-main-600 hover--translate-x-1"
@@ -493,7 +493,7 @@
                   <img src="/assets/images/icons/phone.svg" alt="" />
                 </span>
                 <div class="">
-                  <span class="d-block fw-bold text-white">Phone Number</span>
+                  <span class="d-block fw-bold text-white">Call Us</span>
                   <a
                     href="tel:+447506323070"
                     class="d-block fw-normal text-white hover-text-main-600 hover--translate-x-1"
